--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 10;
   display: flex;
   justify-content: center;
-  background-color: blue;
+  background-color: teal;
 }
 
 .game_gui {
@@ -30,6 +30,14 @@ body {
 .navigation {
   border: 1px solid black;
   padding: 10px;
+}
+
+#monsterStats {
+  display: none;
+  border: 1px black solid;
+  color: white;
+  padding: 5px;
+  background-color: red;
 }
 
 .story {
